Closed Bug 149106 Opened 24 years ago Closed 23 years ago

[FIX]text-decoration does not work on font with color

Categories

(Core :: Layout, defect, P3)

x86
Windows 2000
defect

Tracking

()

RESOLVED FIXED
mozilla1.4beta

People

(Reporter: steck, Assigned: bzbarsky)

References

()

Details

Attachments

(2 files, 1 obsolete file)

From Bugzilla Helper: User-Agent: Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.0; .NET CLR 1.0.3705) BuildID: 2002052306 A table contains multiple rows (TRs), each of which contains a FONT element. Two of the FONT elements have a STYLE attribute with text-decoration:underline. The actual underline is rendered for the text in only one of the elements. In IE6, the text in both elements is rendered with an underline. Reproducible: Always Steps to Reproduce: 1. Look at http://www.ccs.neu.edu/tmp/moz-ul-bug.html 2. 3. Actual Results: Saw underline for "Item two" only Expected Results: Expected underline for "Item two" and "Item three"
Confirming issue in the 2002-06-05-05 1.0.0 OS X build.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P3
Target Milestone: --- → Future
Attached patch fix (obsolete) — Splinter Review
Comment on attachment 121861 [details] [diff] [review] fix David, would you review?
Attachment #121861 - Flags: superreview?(dbaron)
Attachment #121861 - Flags: review?(dbaron)
Taking.
Assignee: attinasi → bzbarsky
Summary: Multiple underline styles in table not respected → [FIX]Multiple underline styles in table not respected
Target Milestone: Future → mozilla1.4beta
Resummarizing to the actual problem.
Summary: [FIX]Multiple underline styles in table not respected → [FIX]text-decoration does not work on font with color
Comment on attachment 121861 [details] [diff] [review] fix Isn't what you really want to do the equivalent of "|=" ? Also, it might be that the NS_STYLE_TEXT_DECORATION_OVERRIDE_ALL is ignored in standards mode. (Also, the indentation of the ColorName line is one character too small.)
You're right, it's ignored in standards mode. I'd sorta like a |=, yes. But see the code in nsStyleContext::ApplyStyleFixups... The difference between |= and that patch is that a <font> with an overline on it would not override the underline color of the surrounding anchor... do we care about that case? If so, we need a way of doing bit-values for nsCSSValue...
How about: foo.SetIntValue(NS_STYLE_... | foo.GetIntValue())
Attachment #121861 - Flags: superreview?(dbaron)
Attachment #121861 - Flags: superreview-
Attachment #121861 - Flags: review?(dbaron)
Attachment #121861 - Flags: review-
Attached patch Better fixSplinter Review
Attachment #121861 - Attachment is obsolete: true
Attachment #125675 - Attachment filename: &#29696;&#25856;&#29440;&#29696;&#11776;&#28672;&#24832;&#29696;&#25344;&#26624; → test.patch
Attachment #125675 - Flags: superreview?(dbaron)
Attachment #125675 - Flags: review?(dbaron)
Attachment #125675 - Attachment filename: test.patch → &#29696;&#25856;&#29440;&#29696;&#11776;&#28672;&#24832;&#29696;&#25344;&#26624;
Attachment #125675 - Flags: superreview+
Attachment #125675 - Flags: review+
Attachment #125675 - Flags: superreview?(dbaron)
Attachment #125675 - Flags: review?(dbaron)
Attachment #125675 - Attachment filename: &#29696;&#25856;&#29440;&#29696;&#11776;&#28672;&#24832;&#29696;&#25344;&#26624; → test.patch
Checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: