Prevent <font>'s color attribute from wiping out its text-decoration style. Bug 149106, r+sr=dbaron